# ili-kiyapayzekauygulamas-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_PROMPTS.md  API.md  API_DOCS.md  CONTRIBUTING.md  DESKTOP_APP.md  DEVELOPMENT_SUMMARY.md  Dockerfile  FRONTEND_COMPLETE.md  PHASE_1_COMPLETE.md  PRODUCTION_READY.md  PROGRESS_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_TEST.sh  README.md  TEST_COMMANDS.sh  TEST_RESULTS.md  TODO_PRODUCTION_READY.md  TODO_PROFESSIONAL.md  V3_COMPLETE_SUMMARY.md  V3_FINAL_STATUS.md  V3_PRODUCTION_READY.md  V3_PROGRESS.md  V3_TEST_PLAN.md  alembic.ini  backend.spec  create_demo_user.py  create_demo_user_correct.py  create_test_user.py  debug_auth.py  docker-compose.yml  electron-builder.yml  final_response.json  list_models.py  pyproject.toml  render.yaml  (+14 more)
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
backend/: .env.example  README.md  alembic.ini  build_backend.py  requirements-minimal.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/ml/: __init__.py  analyzer.py
backend/scripts/: create_demo_user.py  debug_auth.py  reset_test_password.py  test_auth_flow.py  test_password.py
backend/tests/: README.md  __init__.py  conftest.py  test_parser.py
config/: .env.production.template  docker-compose.prod.yml
docs/: CONTRIBUTING.md  QUICKSTART.md  README.md  TEST_IMPROVEMENT_REPORT.md  layer-6-electron.md  layer-7-testing.md  stage-5-privacy-security.md
docs/api/: API.md  API_DOCS.md  api-reference.md
docs/deployment/: deployment-guide.md  postgres-migration.md  production-roadmap.md
docs/development/: code-structure.md  developer-guide.md  testing-guide.md
docs/roadmap/: features.md  innovation.md  production.md
docs/security/: security-guide.md
docs/todo/: TODO_PRODUCTION_READY.md  TODO_PROFESSIONAL.md
figma-design/: index.html  package-lock.json
figma-design-new/: README.md  package.json
figma-design-new/src/: App.tsx  index.css
figma-design/src/: App.tsx  index.css
frontend/: .gitignore  Dockerfile  ENHANCEMENTS.md  README.md  TEST_CHECKLIST.md  capacitor.config.ts  electron-builder.yml  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  package-electron.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AnalysisForm.tsx  AnalysisResult.tsx  AnalysisScreen.tsx  AnalysisTypeScreen.tsx  AnimatedComponents.tsx  AuthScreen.tsx  ChatScreen.tsx  CheckupWidget.tsx  CoachingWidget.tsx  ConflictResolutionWidget.tsx  ConversationStartersWidget.tsx  DailyPulse.tsx  DarkModeToggle.tsx  DashboardScreen.tsx  DateIdeasWidget.tsx  EmotionTimeline.tsx  ErrorBoundary.tsx  ErrorToast.tsx  FileUploadScreen.tsx  GoalsWidget.tsx  InsightsScreen.tsx  LoadingSkeleton.tsx  LottieAnimation.tsx  LoveLanguageWidget.tsx  MainApp.tsx  MessageAnalysisScreen.tsx  MobileNav.tsx  OutcomeCharts.tsx  PrivacyConsent.tsx  ProGate.tsx  ProcessingScreen.tsx  ProgressTracker.tsx  QuestionScreen.tsx  RadarChart.tsx  RelationshipAssessmentScreen.tsx  ResponseAssistant.tsx  ResultScreen.tsx  SkeletonLoader.tsx  StreamingUI.tsx  SubscriptionScreen.tsx  (+5 more)
frontend/contexts/: AuthContext.tsx
frontend/electron/: backend-manager.js  database.js  main.js  main.js.backup  preload.js  sentry.js  updater.js
frontend/hooks/: useToast.ts
frontend/lib/: api.ts  env.ts  pdf.ts  pdfGenerator.ts  proMemberCheck.ts  sentry.ts  theme.tsx  validation.tsx
frontend/public/: manifest.json  sw.js
frontend/resources/: README.md
frontend/types/: ai_response.ts  api.ts  electron.d.ts  index.ts
ml/: analyzer.py
ml/features/: relationship_metrics.py  report_generator.py
ml/preprocessing/: conversation_parser.py  simple_preprocessor.py  turkish_nlp.py
scripts/: create_test_user.py  debug_auth_full.py  init_db.py  setup_portable_python.sh  test_analyzer.py  test_chat_endpoints.py  update_db_schema.py
scripts/deployment/: create_indexes.py  migrate_direct.py  migrate_simple.py  migrate_to_postgres.py  optimize_queries.py
scripts/development/: create_pro_user.py  list_models.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_metrics.py  test_parser.py  test_report_generator.py
(+172 files in other folders)
